# flask-energenie

./: .gitignore  LICENSE  README.md  app.py  calendar_config.example.json  config.example.json  config.py  config.pyi  energenie_control.py  pyproject.toml
calendar_app/: __init__.py  calendar_config.py  database.py  scheduler.py
frontend/: README.md  example.env  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  owner-config.ts  page-types.ts  page-utils.ts  page.tsx  schedule-api.ts  useSchedulePageState.ts
frontend/app/api/: _backend.ts
frontend/app/api/events/: route.ts
frontend/app/api/events/dated/: route.ts
frontend/app/api/events/dated/[id]/: route.ts
frontend/app/api/events/repeating/: route.ts
frontend/app/api/events/repeating/[id]/: route.ts
frontend/app/api/health/: route.ts
frontend/app/api/owners/[ownerId]/events/dated/: route.ts
frontend/app/api/owners/[ownerId]/events/dated/[id]/: route.ts
frontend/app/api/owners/[ownerId]/events/repeating/: route.ts
frontend/app/api/owners/[ownerId]/events/repeating/[id]/: route.ts
frontend/app/api/status/: route.ts
frontend/app/components/: CurrentStatusSection.tsx  DatedEventsSection.tsx  HeaderSection.tsx  PastEventsSection.tsx  RepeatingEventsSection.tsx  TimelineSection.tsx
templates/: index.html
