[project]
name = "flask-energenie"
version = "0.1.0"
description = ""
authors = [{ name = "Henry Morley", email = "henry@morley.org.uk" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = ["flask (>=3.1.3,<4.0.0)", "gpiozero (>=2.0.1,<3.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
